Pley/src/App.css
#root {
  max-width: 100%;
  min-width: 100%;
  margin: 0 auto;
  /* padding: 2rem; */
  text-align: center;
  /* background-color: #424242; */
}

.title {
  max-width: 100%;
  background-color: #E8E7DC;
}

#logo-image {
  height: 200px;
  border-radius: 4rem;
  margin: 50px 0;
}

.read-the-docs {
  color: #888;
}

